--- a/home.html
+++ b/home.html
@@ -1,14 +1,16 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="script.js"></script>
   </head>
   
   <body>
     <div id="navmenu">
       <ul class="navbar">
-	<li><a href="#home"> Home </a></li>
-	<li><a href="#app"> App </a></li>
-	<li><a href="#modules"> Modules </a></li>
+	<li><a href="#home">Home</a></li>
+	<li><a href="#app">App</a></li>
+	<li><a href="#modules">Modules</a></li>
       
 	<div class="right">
 	  <li><a href="https://uirf.research.uiowa.edu"> UIRF </a></li>
@@ -26,27 +28,73 @@
 	</div>
       </ul>
     </div>
-    <div class="wrapper">
+
+    <div id="wrapper">
       <div id="background-img"></div>
       <img src="logo.png" class="logo"></img>
       <div>Stuff about Sounds of Speech</div>
       <img src="ios-badge.svg" class="logo"></img>
       <img src="google-play-badge.png" class="logo"></img>
     </div>
-    <div class="modules">
-      <button>
-	English Module
-      </button>
-      <button>
-	Spanish Module
-      </button>
-      <button>
-	German Module
-      </button>
-      <button>
-	Anatomy Module
-      </button>
+
+    <div id="module-wrapper">
+      <div class="module">
+	<button class="open">
+	  <img src="logo.png"></img>
+	  <p>English Module</p>
+	</button>
+	<div class="modal">
+	  <div class="modal-content">
+	    <span class="close">&times;</span>
+	    Some ENG text here
+	    <object width="100" height="100">
+	      <param name="movie" value="file.swf">
+	      <embed src="english_main.swf" width="100" height="100"></embed>
+	    </object>
+	  </div>
+	</div>
+      </div>
+
+      <div class="module">
+	<button class="open">
+	  <img src="logo.png"></img>
+	  <p>Spanish Module</p>
+	</button>
+	<div class="modal">
+	  <div class="modal-content">
+	    <span class="close">&times;</span>
+	    Some SPA text here
+	  </div>
+	</div>
+      </div>
+
+      <div class="module">
+	<button class="open">
+	  <img src="logo.png"></img>
+	  <p>German Module</p>
+	</button>
+	<div class="modal">
+	  <div class="modal-content">
+	    <span class="close">&times;</span>
+	    Some GER text here
+	  </div>
+	</div>
+      </div>
+
+      <div class="module">
+	<button class="open">
+	  <img src="logo.png"></img>
+	  <p>Anatomy Module</p>
+	</button>
+	<div class="modal">
+	  <div class="modal-content">
+	    <span class="close">&times;</span>
+	    Some ANA text here
+	  </div>
+	</div>
+      </div>
     </div>
+
     <div id="footer">
     </div>
   </body>
