--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!DOCTYPE html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -8,7 +8,7 @@
   <body>
     <div id="navmenu">
       <ul class="navbar">
-	<li><a href="#home">Home</a></li>
+	<li><a href="#">Home</a></li>
 	<li><a href="#app">App</a></li>
 	<li><a href="#modules">Modules</a></li>
       
@@ -33,10 +33,15 @@
       <div id="background-img"></div>
       <img src="resources/logo.png" class="logo"></img>
       <div>Stuff about Sounds of Speech</div>
-      <img src="resources/ios-badge.svg" class="logo"></img>
-      <img src="resources/google-play-badge.png" class="logo"></img>
+      <a href="https://itunes.apple.com/us/app/sounds-of-speech/id780656219?mt=8">
+	<img src="resources/ios-badge.svg" class="logo"></img>
+      </a>
+      <a href="https://play.google.com/store/apps/details?id=edu.uiowa.uirf.soundsofspeech">
+	<img src="resources/google-play-badge.png" class="logo"></img>
+      </a>
     </div>
 
+    <a name="modules"></a>
     <div id="module-wrapper">
       <div class="module">
 	<button class="open">
