stuff in modals are mostly centered correctly

--- a/resources/english/english.html
+++ b/resources/english/english.html
@@ -1,12 +1,14 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>Phonetics: The Sounds of American English</title>
     <link rel="stylesheet" type="text/css" href="../../embed.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="../../inner.js"></script>
   </head>
 
   <body>
-    <div>
-      <div id="left">
+    <div class="outer">
+      <div class="left">
 	<object>
 	  <param name="movie" value="english_main.swf">
 	  <param name="loop" value="false">
@@ -24,9 +26,9 @@
 	  </embed>
 	</object>
       </div>
-      
-      <div id="right">
-	<div id="topRight">
+	
+      <div class="right">
+	<div>
 	  <object>
 	    <param name="movie" value="LIBRARYTopRight.swf">
 	    <param name="loop" value="false">
@@ -44,8 +46,8 @@
 	    </embed>
 	  </object>
 	</div>
-
-	<div id="bottomRight">
+	
+	<div>
 	  <object>
 	    <param name="movie" value="lowRight.swf">
 	    <param name="loop" value="false">
@@ -67,3 +69,4 @@
     </div>
   </body>
 </html>
+
