--- a/resources/german/german.html
+++ b/resources/german/german.html
@@ -1,12 +1,14 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>Phonetik: Die Laute des Deutschen</title>
     <link rel="stylesheet" type="text/css" href="../../embed.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="../../inner.js"></script>
   </head>
 
   <body>
-    <div>
-      <div id="left">
+    <div class="outer">
+      <div class="left">
 	<object>
 	  <param name="movie" value="german_main.swf">
 	  <param name="loop" value="false">
@@ -25,8 +27,8 @@
 	</object>
       </div>
       
-      <div id="right">
-	<div id="topRight">
+      <div class="right">
+	<div>
 	  <object>
 	    <param name="movie" value="LIBRARYTopRight.swf">
 	    <param name="loop" value="false">
@@ -45,7 +47,7 @@
 	  </object>
 	</div>
 
-	<div id="bottomRight">
+	<div>
 	  <object>
 	    <param name="movie" value="lowRight.swf">
 	    <param name="loop" value="false">
