replaced embed tags with object tags

--- a/resources/german/german.html
+++ b/resources/german/german.html
@@ -9,60 +9,42 @@
   <body>
     <div class="outer">
       <div class="left">
-	<object>
+	<object width="530" height="440"
+		type="application/x-shockwave-flash"
+		data="german_main.swf">
 	  <param name="movie" value="german_main.swf">
 	  <param name="loop" value="false">
 	  <param name="quality" value="high">
 	  <param name="scale" value="noborder">
 	  <param name="salign" value="LT">
 	  <param name="bgcolor" value="#999999">
-	  <embed src="german_main.swf"
-		 loop="false" quality="high"
-		 scale="noborder" salign="LT"
-		 bgcolor="#999999"
-		 width="530" height="440"
-		 type="application/x-shockwave-flash"
-		 pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash">
-	  </embed>
 	</object>
       </div>
       
       <div class="right">
 	<div>
-	  <object>
+	  <object width="530" height="440"
+		  type="application/x-shockwave-flash"
+		  data="LIBRARYTopRight.swf">
 	    <param name="movie" value="LIBRARYTopRight.swf">
 	    <param name="loop" value="false">
 	    <param name="quality" value="high">
 	    <param name="scale" value="noborder">
 	    <param name="salign" value="LT">
 	    <param name="bgcolor" value="#999999">
-	    <embed src="LIBRARYTopRight.swf"
-		   loop="false" quality="high"
-		   scale="noborder" salign="LT"
-		   bgcolor="#000000"
-		   width="165" height="85"
-		   type="application/x-shockwave-flash"
-		   pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash">
-	    </embed>
 	  </object>
 	</div>
 
 	<div>
-	  <object>
+	  <object width="530" height="440"
+		  type="application/x-shockwave-flash"
+		  data="lowRight.swf">
 	    <param name="movie" value="lowRight.swf">
 	    <param name="loop" value="false">
 	    <param name="quality" value="high">
 	    <param name="scale" value="noborder">
 	    <param name="salign" value="LT">
 	    <param name="bgcolor" value="#999999">
-	    <embed src="lowRight.swf"
-		   loop="false" quality="high"
-		   scale="noborder" salign="LT"
-		   bgcolor="#999999"
-		   width="165" height="350"
-		   type="application/x-shockwave-flash"
-		   pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash">
-	    </embed>
 	  </object>
 	</div>
       </div>
