--- a/resources/anatomy.html
+++ b/resources/anatomy.html
@@ -7,14 +7,11 @@
   <body>
     <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
 	    codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0"
-	    width="90%" height="90%">
+	    width="90%" height="90%"
+	    type="application/x-shockwave-flash"
+	    data="Anatomy.swf">
       <param name="movie" value="Anatomy.swf">
       <param name="quality" value="high">
-      <embed src="Anatomy.swf" quality="high"
-	     pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
-	     type="application/x-shockwave-flash"
-	     width="90%" height="90%">
-      </embed>
     </object>
   </body>
 </html>
