--- a/resources/anatomy.html
+++ b/resources/anatomy.html
@@ -1,17 +1,17 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>Articulatory Anatomy</title>
     <link rel="stylesheet" type="text/css" href="../embed.css">
   </head>
 
   <body>
-    <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-	    codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0"
-	    width="90%" height="90%"
-	    type="application/x-shockwave-flash"
-	    data="Anatomy.swf">
-      <param name="movie" value="Anatomy.swf">
-      <param name="quality" value="high">
-    </object>
+    <div class="outer">
+      <object width="700" height="470"
+	      type="application/x-shockwave-flash"
+	      data="Anatomy.swf">
+	<param name="movie" value="Anatomy.swf">
+	<param name="quality" value="high">
+      </object>
+    </div>
   </body>
 </html>
