--- a/home.html
+++ b/home.html
@@ -32,7 +32,9 @@
     <div id="wrapper">
       <div id="background-img"></div>
       <img src="resources/logo.png" class="logo"></img>
-      <div>Stuff about Sounds of Speech</div>
+
+      <div class="main-text">Stuff about Sounds of Speech</div>
+
       <a href="https://itunes.apple.com/us/app/sounds-of-speech/id780656219?mt=8">
 	<img src="resources/ios-badge.svg" class="logo"></img>
       </a>
@@ -50,7 +52,7 @@
 	</button>
 	<div class="modal">
 	  <div class="modal-content">
-	    <span class="close">&times;</span>
+	    <div class="close">&times;</div>
 	    <iframe src="resources/english/english.html"></iframe>
 	  </div>
 	</div>
@@ -63,7 +65,7 @@
 	</button>
 	<div class="modal">
 	  <div class="modal-content">
-	    <span class="close">&times;</span>
+	    <div class="close">&times;</div>
 	    <iframe src="resources/spanish/spanish.html"></iframe>
 	  </div>
 	</div>
@@ -76,7 +78,7 @@
 	</button>
 	<div class="modal">
 	  <div class="modal-content">
-	    <span class="close">&times;</span>
+	    <div class="close">&times;</div>
 	    <iframe src="resources/german/german.html"></iframe>
 	  </div>
 	</div>
@@ -89,7 +91,7 @@
 	</button>
 	<div class="modal">
 	  <div class="modal-content">
-	    <span class="close">&times;</span>
+	    <div class="close">&times;</div>
 	    <iframe src="resources/anatomy.html"></iframe>
 	  </div>
 	</div>
