--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
   </head>
   
   <body>
@@ -31,15 +31,15 @@
 
     <div id="wrapper">
       <div id="background-img"></div>
-      <img src="resources/logo.png" class="logo"></img>
+      <img src="resources/images/logo.png" class="logo"></img>
 
-      <div class="main-text">Stuff about Sounds of Speech</div>
+      <div class="main-text">(Placeholder text)</div>
 
       <a href="https://itunes.apple.com/us/app/sounds-of-speech/id780656219?mt=8">
-	<img src="resources/ios-badge.svg" class="logo"></img>
+	<img src="resources/images/ios-badge.svg" class="logo"></img>
       </a>
       <a href="https://play.google.com/store/apps/details?id=edu.uiowa.uirf.soundsofspeech">
-	<img src="resources/google-play-badge.png" class="logo"></img>
+	<img src="resources/images/google-play-badge.png" class="logo"></img>
       </a>
     </div>
 
@@ -47,7 +47,7 @@
     <div id="module-wrapper">
       <div class="module">
 	<button class="open">
-	  <img src="resources/logo.png"></img>
+	  <img src="resources/images/logo.png"></img>
 	  <p>English Module</p>
 	</button>
 	<div class="modal">
@@ -60,7 +60,7 @@
 
       <div class="module">
 	<button class="open">
-	  <img src="resources/logo.png"></img>
+	  <img src="resources/images/logo.png"></img>
 	  <p>Spanish Module</p>
 	</button>
 	<div class="modal">
@@ -73,7 +73,7 @@
 
       <div class="module">
 	<button class="open">
-	  <img src="resources/logo.png"></img>
+	  <img src="resources/images/logo.png"></img>
 	  <p>German Module</p>
 	</button>
 	<div class="modal">
@@ -86,13 +86,13 @@
 
       <div class="module">
 	<button class="open">
-	  <img src="resources/logo.png"></img>
+	  <img src="resources/images/logo.png"></img>
 	  <p>Anatomy Module</p>
 	</button>
 	<div class="modal">
 	  <div class="modal-content">
 	    <div class="close">&times;</div>
-	    <iframe src="resources/anatomy.html"></iframe>
+	    <iframe src="resources/anatomy/anatomy.html"></iframe>
 	  </div>
 	</div>
       </div>
