--- a/resources/anatomy/anatomy.html
+++ b/resources/anatomy/anatomy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <title>Articulatory Anatomy</title>
-    <link rel="stylesheet" type="text/css" href="../embed.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/embed.css">
   </head>
 
   <body>
