translations accept alternate text for header and body

--- a/home.html
+++ b/home.html
@@ -18,11 +18,11 @@
 	  <li>
 	    <a href="#">Languages</a>
 	    <ul>
-	      <li><a href="#english">English</a></li>
-	      <li><a href="#spanish">Spanish</a></li>
-	      <li><a href="#german">German</a></li>
-	      <li><a href="#korean">Korean</a></li>
-	      <li><a href="#chinese">Chinese</a></li>
+	      <li class="lang"><a href="#english">English</a></li>
+	      <li class="lang"><a href="#spanish">Spanish</a></li>
+	      <li class="lang"><a href="#german">German</a></li>
+	      <li class="lang"><a href="#korean">Korean</a></li>
+	      <li class="lang"><a href="#chinese">Chinese</a></li>
 	    </ul>
 	  </li>
 	</div>
@@ -33,7 +33,12 @@
       <div id="background-img"></div>
       <img src="resources/images/logo.png" class="logo"></img>
 
-      <div class="main-text">(Placeholder text)</div>
+      <h1 id="main-title">Sounds of Speech</h1>
+      <div id="main-text">
+	This is some english text
+	This is some english text
+	This is some english text
+      </div>
 
       <a href="https://itunes.apple.com/us/app/sounds-of-speech/id780656219?mt=8">
 	<img src="resources/images/ios-badge.svg" class="logo"></img>
@@ -99,6 +104,13 @@
     </div>
 
     <div id="footer">
+      <a href="https://www.uiowa.edu">
+	<img src="resources/images/uiowa-logo.svg" class="logo" style="margin:0;">
+	</img>
+      </a>
+      <div id="footer-text">
+	&#x24B8; 2017 The University of Iowa
+      </div>
     </div>
   </body>
 </html>
