buttons and menu are translated as well

--- a/home.html
+++ b/home.html
@@ -8,9 +8,11 @@
   <body>
     <div id="navmenu">
       <ul class="navbar">
-	<li><a href="#">Home</a></li>
-	<li><a href="#app">App</a></li>
-	<li><a href="#modules">Modules</a></li>
+	<div id="menuLeft">
+	  <li><a href="#">Home</a></li>
+	  <li><a href="#app">App</a></li>
+	  <li><a href="#modules">Modules</a></li>
+	</div>
       
 	<div class="right">
 	  <li><a href="https://uirf.research.uiowa.edu"> UIRF </a></li>
@@ -37,7 +39,7 @@
       <div id="main-text">
 	This is some english text
 	This is some english text
-	This is some english text
+        This is some english text
       </div>
 
       <a href="https://itunes.apple.com/us/app/sounds-of-speech/id780656219?mt=8">
