--- a/resources/spanish/spanish.html
+++ b/resources/spanish/spanish.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
   <head>
     <title>Fonética: Los Sonidos del Español</title>
-    <link rel="stylesheet" type="text/css" href="../../styles/embed.css">
+    <link rel="stylesheet" type="text/css" href="../../embed.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../../scripts/inner.js"></script>
+    <script src="../../inner.js"></script>
   </head>
 
   <body>
