--- a/resources/english/english.html
+++ b/resources/english/english.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
   <head>
+    <meta charset="UTF-8">
+
     <title>Phonetics: The Sounds of American English</title>
     <link rel="stylesheet" type="text/css" href="../../styles/embed.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
