--- a/resources/german/german.html
+++ b/resources/german/german.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
   <head>
+    <meta charset="UTF-8">
+
     <title>Phonetik: Die Laute des Deutschen</title>
-    <link rel="stylesheet" type="text/css" href="../../embed.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/embed.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../../inner.js"></script>
+    <script src="../../scripts/inner.js"></script>
   </head>
 
   <body>
