--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
       <img src="resources/images/logo.png" class="main-logo"></img>
 
       <div id="phone-img">
-	<img src="resources/images/phone.jpg"></img>
+	<img src="resources/images/phone.jpg" style="height: 100%"></img>
       </div>
 
       <div class="textbox" id="title">
@@ -126,8 +126,8 @@
 	</div>
       </div>
 
-      <div class="centered" style="max-width: 25%">
-	<b>The #1 phonetics website is available in English, Spanish, and German.</b>
+      <div id="module-text">
+	The #1 phonetics website is available in English, Spanish, and German.
       </div>
     </div>
 
