flash files load properly

--- a/home.html
+++ b/home.html
@@ -40,7 +40,8 @@
       <img src="resources/images/logo.png" class="main-logo"></img>
 
       <div id="phone-img">
-	<img src="resources/images/phone.jpg" style="height: 100%"></img>
+	<img src="resources/images/phoneFrame.png" style="height: 100%"></img>
+	<img src="resources/images/phone.jpg" id="phone-size"></img>
       </div>
 
       <div class="textbox" id="title">
@@ -67,24 +68,6 @@
     </div>
     
     <a name="modules"></a>
-
-    <div id="anatomy-wrapper">
-      <div class="module" style="max-width: 50%">
-	<button class="anatomy-button">
-	  <img id="anatomy-img" src="resources/images/anatomy.jpg"></img>
-	</button>
-	<div class="modal">
-	  <div class="modal-content">
-	    <div class="close">&times;</div>
-	    <iframe src="resources/anatomy/Anatomy.swf"></iframe>
-	  </div>
-	</div>
-      </div>
-      <div class="centered">
-	<h1>Anatomy</h1>
-	<i>View Anatomy terms and visuals of placements</i>
-      </div>
-    </div>
     
     <div id="module-wrapper">
       <div class="module">
@@ -128,6 +111,24 @@
 
       <div id="module-text">
 	The #1 phonetics website is available in English, Spanish, and German.
+      </div>
+    </div>
+
+    <div id="anatomy-wrapper">
+      <div class="module" style="max-width: 50%">
+	<button class="anatomy-button">
+	  <img id="anatomy-img" src="resources/images/anatomy.jpg"></img>
+	</button>
+	<div class="modal">
+	  <div class="modal-content">
+	    <div class="close">&times;</div>
+	    <iframe src="resources/anatomy/Anatomy.swf"></iframe>
+	  </div>
+	</div>
+      </div>
+      <div class="centered">
+	<h1>Anatomy</h1>
+	<i>View Anatomy terms and visuals of placements</i>
       </div>
     </div>
 
