--- a/resources/spanish/spanish.html
+++ b/resources/spanish/spanish.html
@@ -1,55 +1,30 @@
-<!DOCTYPE html>
-  <head>
-    <meta charset="UTF-8">
+<html>
 
-    <title>Fonética: Los Sonidos del Español</title>
-    <link rel="stylesheet" type="text/css" href="../../styles/embed.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../../scripts/inner.js"></script>
-  </head>
+<head>
+<title>Fon&eacute;tica:  Los sonidos del espa&ntilde;ol
+</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+</head>
 
-  <body>
-    <div class="outer">
-      <div class="left">
-	<object width="530" height="440"
-		type="application/x-shockwave-flash"
-		data="spanish_main.swf">
-	  <param name="movie" value="spanish_main.swf">
-	  <param name="loop" value="false">
-	  <param name="quality" value="high">
-	  <param name="scale" value="noborder">
-	  <param name="salign" value="LT">
-	  <param name="bgcolor" value="#999999">
-	</object>
-      </div>
-      
-      <div class="right">
-	<div>
-	  <object width="165" height="85"
-		  type="application/x-shockwave-flash"
-		  data="SP-LIBRARYTopRight.swf">
-	    <param name="movie" value="SP-LIBRARYTopRight.swf">
-	    <param name="loop" value="false">
-	    <param name="quality" value="high">
-	    <param name="scale" value="noborder">
-	    <param name="salign" value="LT">
-	    <param name="bgcolor" value="#999999">
-	  </object>
-	</div>
+<frameset cols="530,1*" rows="*" border=" 0" framespacing=" 0" frameborder="NO" bordercolor="#CCCCCC"> 
+  <frame src="spanish_main.html" name="leftframe" marginwidth="0" marginheight="0" frameborder="NO" scrolling="NO" noresize>
+  <frameset rows="86,1*" cols="*" frameborder="NO"> 
+    <frame name="topRightFrame" marginwidth="0" marginheight="0" frameborder="NO" scrolling="NO" src="topRight.htm">
+    <frame src="rightFrame.htm" name="rightFrame" frameborder="NO" scrolling="NO" marginwidth="0" marginheight="0">
+  </frameset>
+</frameset>
+<noframes><body bgcolor="#FFFFFF">
 
-	<div>
-	  <object width="165" height="350"
-		  type="application/x-shockwave-flash"
-		  data="lowRight.swf">
-	    <param name="movie" value="lowRight.swf">
-	    <param name="loop" value="false">
-	    <param name="quality" value="high">
-	    <param name="scale" value="noborder">
-	    <param name="salign" value="LT">
-	    <param name="bgcolor" value="#999999">
-	  </object>
-	</div>
-      </div>
-    </div>
-  </body>
+</body></noframes>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-45547011-1', 'uiowa.edu');
+  ga('send', 'pageview');
+
+</script>
 </html>
