--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@
 	<div id="menuRight">
 	  <li class="lang"><a href="#english">English</a></li>
 	  <li class="lang"><a href="#spanish">Spanish</a></li>
-	  <li class="lang"><a href="#german">German</a></li>
 	  <li class="lang"><a href="#korean">Korean</a></li>
-	  <li class="lang"><a href="#chinese">Chinese</a></li>
+	  <li class="lang"><a href="#chineses">Chinese (simplified)</a></li>
+	  <li class="lang"><a href="#chineset">Chinese (traditional)</a></li>
 	</div>
       </ul>
     </div>
@@ -55,6 +55,8 @@
 	  This is some english text
           This is some english text
 	</p>
+	<ul id="features">
+	</ul>
       </div>
       
       <div style="overflow: auto">
