--- a/home.html
+++ b/home.html
@@ -51,11 +51,15 @@
     </div>
     <div id="text-wrapper">
       <div class="textbox">
-	<p id="main-text">This is some english text
-	  This is some english text
-          This is some english text
+	<p id="main-text">Sounds of Speech™ provides a comprehensive understanding of how each of the speech sounds of American English is formed. It includes animations, videos, and audio samples that describe the essential features of each of the consonants and vowels of American English. Sounds of Speech™ is especially useful for students studying English as a second language. Features include:
 	</p>
 	<ul id="features">
+	  <li>A real-time animated articulatory diagram for each consonant and vowel</li>
+	  <li>An annotated step-by-step description of how each speech sound is produced</li>
+	  <li>Facial view video (not available for Android 2.2 and 2.3) and audio samples for each speech sound
+	  </li>
+	  <li>Navigation that reflects the classification of consonants by manner, place or voicing and of vowels by tongue position</li>
+	  <li>Ability to see and hear native speakers pronounce sound for each consonant and vowel</li>
 	</ul>
       </div>
       
@@ -124,7 +128,7 @@
 	<div class="modal">
 	  <div class="modal-content">
 	    <div class="close">&times;</div>
-	    <iframe src="resources/anatomy/Anatomy.swf"></iframe>
+	    <iframe src="resources/anatomy.htm"></iframe>
 	  </div>
 	</div>
       </div>
